--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base-x": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
   }
 }
