feat: 串接用戶圖片更新 API，並更新 react-redux 當中的圖片數據

--- a/react/.vscode/settings.json
+++ b/react/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
+    // 啟用保存時自動格式化
+    "editor.formatOnSave": true,
+
+    // 設置 Prettier 為默認格式化工具
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+
     // 是否在語句的末尾添加分號
     "prettier.semi": true,
 
@@ -12,17 +18,17 @@
     "prettier.jsxSingleQuote": false,
 
     // 是否將末尾逗號保留在多行語句/屬性的末尾
-    "prettier.trailingComma": "all", 
+    "prettier.trailingComma": "all",
 
     // 在對象字面量的大括號中加入空格
-    "prettier.bracketSpacing": true, 
+    "prettier.bracketSpacing": true,
 
     // 在 JSX 中，大括號是否與元素同行
-    "prettier.bracketSameLine": false, 
+    "prettier.bracketSameLine": false,
 
     // 箭頭函數的參數是否使用括號，'always'：總是使用；'avoid'：單個參數時不使用
-    "prettier.arrowParens": "always", 
+    "prettier.arrowParens": "always",
 
     // 換行符的類型，'auto'：自動檢測；'lf'：使用 LF；'crlf'：使用 CRLF
-    "prettier.endOfLine": "lf",
+    "prettier.endOfLine": "lf"
 }
